apps/kubernetes-dashboard/10-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.63.203   # pick an unused IP from your MetalLB pool
  selector:
    k8s-app: kubernetes-dashboard
  ports:
  - port: 443
    targetPort: 8443
