apps/kubernetes-dashboard/20-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-tailscale
  namespace: kubernetes-dashboard
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kubernetes-dashboard-kong-proxy
      port:
        number: 443
  tls:
    - hosts:
        - k8s-dashboard
